--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.2",
+    "js-cookie": "^2.2.1",
+    "js-cookies": "^1.0.4",
     "vue": "^2.6.10",
+    "vue-class-component": "^7.1.0",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.1"
   },
@@ -30,12 +33,17 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/base",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": "warn"
+    },
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "babel-eslint",
+      "ecmaFeatures": {
+        "legacyDecorators": true
+      }
     }
   },
   "postcss": {
