--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.6.10",
     "vue-class-component": "^7.1.0",
     "vue-router": "^3.1.3",
+    "vuetify": "^2.1.9",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
@@ -25,7 +26,11 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "sass": "^1.23.3",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "^2.0.2",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
     "root": true,
