--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.2",
+    "html2canvas": "^1.0.0-rc.5",
     "js-cookie": "^2.2.1",
     "js-cookies": "^1.0.4",
+    "jspdf": "^1.5.3",
     "vue": "^2.6.10",
     "vue-class-component": "^7.1.0",
     "vue-router": "^3.1.3",
