fix file-saver git issue

--- a/DockerFile
+++ b/DockerFile
@@ -1,8 +1,9 @@
 # build environment
-FROM node:12.2.0-alpine as build
+FROM node:12.10.0-alpine as build
 WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
 COPY package.json /app/package.json
+RUN apk update && apk add git && rm -rf /var/cache/apk/*
 RUN npm install --silent
 RUN npm install @vue/cli@3.7.0 -g
 COPY . /app
