--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "html2canvas": "^1.0.0-rc.5",
     "js-cookie": "^2.2.1",
     "js-cookies": "^1.0.4",
+    "js2excel": "^1.0.1",
     "jspdf": "^1.5.3",
     "vue": "^2.6.10",
     "vue-class-component": "^7.1.0",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.9",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "xlsx": "^0.15.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
