--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.6.10",
     "vue-class-component": "^7.1.0",
     "vue-router": "^3.1.3",
+    "vue-signature-pad": "^1.1.17",
     "vuetify": "^2.1.9",
     "vuex": "^3.1.1",
     "xlsx": "^0.15.1"
