ssl setting for nginx

--- a/nginx/nginx-ssl.conf
+++ b/nginx/nginx-ssl.conf
@@ -17,3 +17,19 @@ server {
     root   /usr/share/nginx/html;
   }
 }
+
+server {
+  listen 3443 ssl http2;
+  server_name ~(.+reg|reg.+)\.kartuas2in1\.com$;
+
+  ssl_certificate /etc/letsencrypt/live/kartuas2in1.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/kartuas2in1.com/privkey.pem;
+
+  location / {
+    proxy_pass http://$host:3000/;
+    proxy_set_header Host                 $http_host;
+    proxy_set_header X-Real-IP            $remote_addr;
+    proxy_set_header X-Forwarded-For      $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto    "https";
+  }
+}
