--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,8 @@
 server {
-
   listen 80;
 
   location / {
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
-    try_files $uri $uri/ /index.html;
+    return 301 https://$host$request_uri;
   }
 
   error_page   500 502 503 504  /50x.html;
@@ -14,4 +11,7 @@ server {
     root   /usr/share/nginx/html;
   }
 
+  location /.well-known/acme-challenge/ {
+    root /var/www/certbot;
+  }
 }
