--- a/nginx/nginx-ssl.conf
+++ b/nginx/nginx-ssl.conf
@@ -5,31 +5,22 @@ server {
   ssl_certificate /etc/letsencrypt/live/kartuas2in1.com/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/kartuas2in1.com/privkey.pem;
 
+  access_log /var/log/nginx/regserver-ssl.access.log;
+	error_log /var/log/nginx/regserver-ssl.error.log error;
+
   location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
     try_files $uri $uri/ /index.html;
   }
 
+  location /api/ {
+    proxy_pass http://192.168.50.140:3000/;
+  }
+
   error_page   500 502 503 504  /50x.html;
 
   location = /50x.html {
     root   /usr/share/nginx/html;
-  }
-}
-
-server {
-  listen 3443 ssl http2;
-  server_name ~(.+reg|reg.+)\.kartuas2in1\.com$;
-
-  ssl_certificate /etc/letsencrypt/live/kartuas2in1.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/kartuas2in1.com/privkey.pem;
-
-  location / {
-    proxy_pass http://$host:3000/;
-    proxy_set_header Host                 $http_host;
-    proxy_set_header X-Real-IP            $remote_addr;
-    proxy_set_header X-Forwarded-For      $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto    "https";
   }
 }
