--- a/nginx/nginx-ssl.conf
+++ b/nginx/nginx-ssl.conf
@@ -15,7 +15,7 @@ server {
   }
 
   location /api/ {
-    proxy_pass http://192.168.50.140:3000/;
+    proxy_pass http://telin:3000/;
   }
 
   error_page   500 502 503 504  /50x.html;
