--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "js-cookies": "^1.0.4",
     "js2excel": "^1.0.1",
     "jspdf": "^1.5.3",
+    "libphonenumber-js": "^1.7.27",
     "vue": "^2.6.10",
     "vue-class-component": "^7.1.0",
     "vue-router": "^3.1.3",
